--- a/index.html
+++ b/index.html
@@ -3,353 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overly Literal To-Do List</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Overly Literal</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            background-color: #0B0F14;
-            color: white;
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .task-card {
-            background: linear-gradient(135deg, rgba(79, 195, 247, 0.05) 0%, rgba(11, 15, 20, 0.8) 100%);
-            border: 1px solid rgba(79, 195, 247, 0.2);
-            border-radius: 12px;
-            padding: 1rem 1.5rem;
-            transition: all 0.3s ease;
-        }
-
-        .task-card:hover {
-            border-color: rgba(79, 195, 247, 0.4);
-            transform: translateY(-2px);
-            box-shadow: 0 8px 24px rgba(79, 195, 247, 0.15);
-        }
-
-        .task-text {
-            color: rgba(255, 255, 255, 0.9);
-            font-size: 1rem;
-            line-height: 1.6;
-        }
-
-
-        .input-bar {
-            background: rgba(255, 255, 255, 0.05);
-            border: 2px solid rgba(79, 195, 247, 0.3);
-            border-radius: 12px;
-            padding: 1rem 1.5rem;
-            color: white;
-            width: 100%;
-            font-size: 1rem;
-            transition: all 0.3s ease;
-            outline: none;
-        }
-
-        .input-bar:focus {
-            border-color: #4FC3F7;
-            background: rgba(255, 255, 255, 0.08);
-            box-shadow: 0 0 0 4px rgba(79, 195, 247, 0.1);
-        }
-
-        .input-bar::placeholder {
-            color: rgba(255, 255, 255, 0.3);
-        }
-
-        .add-button {
-            background: #4FC3F7;
-            color: #0B0F14;
-            padding: 1rem 2rem;
-            border-radius: 12px;
-            font-weight: 600;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-size: 1rem;
-        }
-
-        .add-button:hover {
-            background: #6DD5FF;
-            transform: translateY(-1px);
-            box-shadow: 0 4px 16px rgba(79, 195, 247, 0.3);
-        }
-
-        .add-button:active {
-            transform: translateY(0);
-        }
-
-        .delete-button {
-            background: rgba(255, 59, 48, 0.1);
-            color: #FF3B30;
-            padding: 0.5rem 1rem;
-            border-radius: 8px;
-            border: 1px solid rgba(255, 59, 48, 0.3);
-            font-size: 0.875rem;
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-
-        .delete-button:hover {
-            background: rgba(255, 59, 48, 0.2);
-            border-color: rgba(255, 59, 48, 0.5);
-        }
-
-        .task-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1.5rem;
-            padding-bottom: 1rem;
-            border-bottom: 1px solid rgba(79, 195, 247, 0.2);
-        }
-
-        .task-title {
-            color: #4FC3F7;
-            font-size: 1.25rem;
-            font-weight: 600;
-        }
-
-
-        .fade-in {
-            animation: fadeIn 0.4s ease-in;
-        }
-
-        @keyframes fadeIn {
+        @keyframes progress-boutique {
             from {
-                opacity: 0;
-                transform: translateY(10px);
+                transform: translateX(-100%);
             }
             to {
-                opacity: 1;
-                transform: translateY(0);
+                transform: translateX(100%);
             }
         }
 
-        .mode-switcher {
-            display: flex;
-            gap: 0.5rem;
-            background: rgba(255, 255, 255, 0.03);
-            padding: 0.25rem;
-            border-radius: 8px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .mode-button {
-            padding: 0.5rem 1rem;
-            font-size: 0.75rem;
-            background: transparent;
-            color: rgba(255, 255, 255, 0.5);
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            font-weight: 500;
-        }
-
-        .mode-button:hover {
-            color: rgba(255, 255, 255, 0.8);
-            background: rgba(255, 255, 255, 0.05);
-        }
-
-        .mode-button.active {
-            background: #4FC3F7;
-            color: #0B0F14;
+        .animate-progress-boutique {
+            animation: progress-boutique 3s ease-in-out infinite;
         }
     </style>
 </head>
 <body>
-    <div class="min-h-screen px-6 py-12">
-        <div class="max-w-4xl mx-auto">
-            <!-- Hero Section -->
-            <header class="text-center mb-12">
-                <h1 class="text-6xl md:text-7xl font-bold tracking-tight mb-4 leading-tight">
-                    OVERLY LITERAL
-                </h1>
-                <p class="text-lg text-white/60 tracking-wide mb-6">
-                    Tasks Taken Way Too Literally 😏
-                </p>
-
-                <!-- Mode Switcher -->
-                <div class="flex justify-center">
-                    <div class="mode-switcher">
-                        <button class="mode-button active" data-mode="standard">Standard</button>
-                        <button class="mode-button" data-mode="pirate">Pirate</button>
-                        <button class="mode-button" data-mode="shakespeare">Shakespeare</button>
-                    </div>
-                </div>
-            </header>
-
-            <!-- Input Section -->
-            <div class="mb-12">
-                <div class="flex gap-4">
-                    <input
-                        id="taskInput"
-                        type="text"
-                        class="input-bar"
-                        placeholder="Add a task..."
-                        autocomplete="off"
-                    />
-                    <button id="addButton" class="add-button">
-                        Add Task
-                    </button>
-                </div>
-            </div>
-
-            <!-- Tasks Container -->
-            <div id="tasksContainer" class="space-y-6">
-                <!-- Tasks will be dynamically added here -->
-            </div>
-        </div>
-    </div>
-
-    <script>
-        const taskInput = document.getElementById('taskInput');
-        const addButton = document.getElementById('addButton');
-        const tasksContainer = document.getElementById('tasksContainer');
-        const modeButtons = document.querySelectorAll('.mode-button');
-
-        let currentMode = 'standard';
-
-        // Mode switcher logic
-        modeButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                modeButtons.forEach(btn => btn.classList.remove('active'));
-                button.classList.add('active');
-                currentMode = button.dataset.mode;
-            });
-        });
-
-        // Overly literal task translations
-        const taskTranslations = {
-            'buy milk': {
-                standard: 'Acquire the bovine secretion from a commercial hub.',
-                pirate: 'Plunder the white nectar from the merchant\'s dock, matey!',
-                shakespeare: 'Pray, fetch the creamy yield of the kine from the market.'
-            },
-            'call mom': {
-                standard: 'Initiate telecommunication protocol with maternal parental unit.',
-                pirate: 'Ring up the old sea witch who birthed ye, arr!',
-                shakespeare: 'Hark! Discourse with thy mother through distant communication.'
-            },
-            'exercise': {
-                standard: 'Engage in systematic physical exertion to elevate cardiovascular function.',
-                pirate: 'Swab the deck and work yer muscles, ye lazy barnacle!',
-                shakespeare: 'Moveth thy body with vigorous and healthful exertion.'
-            },
-            'study': {
-                standard: 'Process informational content via ocular absorption for cognitive retention.',
-                pirate: 'Cram knowledge into yer noggin from them dusty scrolls!',
-                shakespeare: 'Absorbeth wisdom from the written word into thy mind.'
-            },
-            'sleep': {
-                standard: 'Enter prolonged state of reduced consciousness on horizontal surface.',
-                pirate: 'Hit the hammock and drift to the land of dreams, sailor!',
-                shakespeare: 'Surrender thyself to slumber\'s sweet embrace upon thy bed.'
-            },
-            'cook dinner': {
-                standard: 'Apply thermal energy to consumable organic matter for evening sustenance.',
-                pirate: 'Prepare the grub for tonight\'s feast, ye scurvy dog!',
-                shakespeare: 'Preparest the evening meal through culinary arts.'
-            },
-            'walk dog': {
-                standard: 'Escort domesticated canine on perambulatory waste elimination excursion.',
-                pirate: 'Take the mangy cur out fer a stroll on the poop deck!',
-                shakespeare: 'Accompany thy hound on a leisurely promenade outdoors.'
-            }
-        };
-
-        function getTaskTranslation(task, mode) {
-            const normalizedTask = task.toLowerCase().trim();
-
-            // Check for exact matches
-            if (taskTranslations[normalizedTask]) {
-                return taskTranslations[normalizedTask][mode];
-            }
-
-            // Check for partial matches
-            for (const key in taskTranslations) {
-                if (normalizedTask.includes(key) || key.includes(normalizedTask)) {
-                    return taskTranslations[key][mode];
-                }
-            }
-
-            // Generic fallback
-            if (mode === 'pirate') {
-                return `Complete the task "${task}" with proper pirate swagger, arr!`;
-            } else if (mode === 'shakespeare') {
-                return `Accomplisheth the task of "${task}" with utmost diligence.`;
-            } else {
-                return `Execute the prescribed task: "${task}" with excessive literalism.`;
-            }
-        }
-
-        function createTaskCard(taskName) {
-            const translation = getTaskTranslation(taskName, currentMode);
-            const taskId = Date.now();
-
-            const taskCard = document.createElement('div');
-            taskCard.className = 'task-card fade-in';
-            taskCard.dataset.taskId = taskId;
-
-            const taskHeader = document.createElement('div');
-            taskHeader.className = 'task-header';
-
-            const taskTitle = document.createElement('div');
-            taskTitle.className = 'task-title';
-            taskTitle.textContent = taskName;
-
-            const deleteButton = document.createElement('button');
-            deleteButton.className = 'delete-button';
-            deleteButton.textContent = 'Delete';
-            deleteButton.onclick = () => {
-                taskCard.style.opacity = '0';
-                taskCard.style.transform = 'scale(0.95)';
-                setTimeout(() => taskCard.remove(), 300);
-            };
-
-            taskHeader.appendChild(taskTitle);
-            taskHeader.appendChild(deleteButton);
-
-            const taskText = document.createElement('div');
-            taskText.className = 'task-text';
-            taskText.textContent = translation;
-
-            taskCard.appendChild(taskHeader);
-            taskCard.appendChild(taskText);
-
-            return taskCard;
-        }
-
-        function addTask() {
-            const taskName = taskInput.value.trim();
-
-            if (taskName === '') {
-                taskInput.style.borderColor = 'rgba(255, 59, 48, 0.5)';
-                setTimeout(() => {
-                    taskInput.style.borderColor = '';
-                }, 500);
-                return;
-            }
-
-            const taskCard = createTaskCard(taskName);
-            tasksContainer.appendChild(taskCard);
-
-            taskInput.value = '';
-            taskInput.focus();
-        }
-
-        addButton.addEventListener('click', addTask);
-
-        taskInput.addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') {
-                addTask();
-            }
-        });
-
-        // Auto-focus input on page load
-        taskInput.focus();
-    </script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
